--- a/package.json
+++ b/package.json
@@ -1,18 +1,15 @@
 {
   "name": "verified-study",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Backend for Verified Study Notes Generator",
+  "main": "server.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
-    "body-parser": "^2.2.2",
+    "express": "^5.2.1",
     "cors": "^2.8.5",
-    "express": "^5.2.1"
+    "body-parser": "^2.2.2"
   }
 }
