--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^5.2.1",
+    "body-parser": "^2.2.2",
     "cors": "^2.8.5",
-    "body-parser": "^2.2.2"
+    "express": "^5.2.1"
   }
 }
