--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "concurrently \"npm start --prefix server\" \"npm run dev --prefix app\""
   },
   "dependencies": {
     "body-parser": "^2.2.2",
