update package.json , package-lock.json

--- a/server/package.json
+++ b/server/package.json
@@ -7,8 +7,9 @@
         "start": "node server.js"
     },
     "dependencies": {
-        "express": "^5.2.1",
+        "body-parser": "^2.2.2",
         "cors": "^2.8.5",
-        "body-parser": "^2.2.2"
+        "express": "^5.2.1",
+        "server.js": "^1.0.0"
     }
 }
