--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "dependencies": {
         "body-parser": "^2.2.2",
         "cors": "^2.8.5",
+        "dotenv": "^17.2.3",
         "express": "^5.2.1",
         "server.js": "^1.0.0"
     }
