--- a/server/package.json
+++ b/server/package.json
@@ -7,10 +7,13 @@
         "start": "node server.js"
     },
     "dependencies": {
-        "body-parser": "^2.2.2",
+        "body-parser": "^1.20.2",
         "cors": "^2.8.5",
-        "dotenv": "^17.2.3",
-        "express": "^5.2.1",
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2",
+        "mongoose": "^8.0.0",
+        "package-lock.json": "^1.0.0",
+        "package.json": "^2.0.1",
         "server.js": "^1.0.0"
     }
 }
