--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "jspdf": "^4.0.0",
     "next": "^16.1.2",
+    "next-auth": "^4.24.13",
     "react": "^19.2.3",
     "react-dom": "^19.2.3"
   },
